# gatherarr

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.devcontainer  LICENSE  PRD.md  README.md  SYSTEM.md  pyproject.toml  requirements.txt
.cursor/rules/: architecture.mdc  style.mdc  testing.mdc
.devcontainer/: README.md  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-image.yml  hadolint.yml
app/: __main__.py  action_logging.py  arr_client.py  config.py  http_client.py  log_redaction.py  logging.py  main.py  metrics.py  scheduler.py  startup_banner.py  state.py  tag_utils.py
app/handlers/: __init__.py  base.py  movie.py  season.py
app/radarr_client/: __init__.py
app/radarr_client/api/alternative_title/: get_api_v3_alttitle.py  get_api_v3_alttitle_id.py
app/radarr_client/api/api_info/: get_api.py
app/radarr_client/api/authentication/: post_login.py
app/radarr_client/api/auto_tagging/: delete_api_v3_autotagging_id.py  get_api_v3_autotagging_id.py
app/radarr_client/api/backup/: delete_api_v3_system_backup_id.py
app/radarr_client/api/blocklist/: delete_api_v3_blocklist_id.py  get_api_v3_blocklist.py  get_api_v3_blocklist_movie.py
app/radarr_client/api/calendar/: get_api_v3_calendar.py
app/radarr_client/api/calendar_feed/: get_feed_v3_calendar_radarr_ics.py
app/radarr_client/api/collection/: get_api_v3_collection.py  get_api_v3_collection_id.py  put_api_v3_collection.py  put_api_v3_collection_id.py
app/radarr_client/api/command/: get_api_v3_command.py  get_api_v3_command_id.py
app/radarr_client/api/credit/: get_api_v3_credit.py  get_api_v3_credit_id.py
app/radarr_client/api/custom_filter/: delete_api_v3_customfilter_id.py  get_api_v3_customfilter.py  get_api_v3_customfilter_id.py  post_api_v3_customfilter.py  put_api_v3_customfilter_id.py
app/radarr_client/api/custom_format/: get_api_v3_customformat.py  get_api_v3_customformat_id.py  put_api_v3_customformat_id.py
app/radarr_client/api/cutoff/: get_api_v3_wanted_cutoff.py
app/radarr_client/api/delay_profile/: get_api_v3_delayprofile.py  get_api_v3_delayprofile_id.py
app/radarr_client/api/disk_space/: get_api_v3_diskspace.py
app/radarr_client/api/download_client/: delete_api_v3_downloadclient_id.py  get_api_v3_downloadclient.py  get_api_v3_downloadclient_id.py  get_api_v3_downloadclient_schema.py  post_api_v3_downloadclient.py  post_api_v3_downloadclient_action_name.py  post_api_v3_downloadclient_test.py  put_api_v3_downloadclient_bulk.py  put_api_v3_downloadclient_id.py
app/radarr_client/api/download_client_config/: get_api_v3_config_downloadclient.py  get_api_v3_config_downloadclient_id.py  put_api_v3_config_downloadclient_id.py
app/radarr_client/api/extra_file/: get_api_v3_extrafile.py
app/radarr_client/api/health/: get_api_v3_health.py
app/radarr_client/api/ping/: get_ping.py
app/radarr_client/models/: __init__.py  add_movie_method.py  add_movie_options.py  alternative_title_resource.py  api_info_resource.py  apply_tags.py  authentication_type.py  auto_tagging_resource.py  auto_tagging_specification_schema.py  backup_resource.py  blocklist_resource.py  blocklist_resource_paging_resource.py  calendar_release_type.py  certificate_validation_type.py  collection_movie_resource.py  collection_resource.py  collection_update_resource.py  colon_replacement_format.py  command.py  command_priority.py  command_resource.py  credit_resource.py  credit_type.py  custom_filter_resource_filters_type_0_item.py  custom_format_resource.py  custom_format_specification_schema.py  download_client_bulk_resource.py  download_client_config_resource.py  download_client_resource.py  download_protocol.py  extra_file_resource.py  extra_file_type.py  field.py  file_date_type.py  health_check_result.py  health_resource.py  history_resource.py  import_list_bulk_resource.py  import_list_config_resource.py  import_list_exclusion_resource.py  (+60 more)
app/sonarr_client/: __init__.py  client.py
app/sonarr_client/models/: __init__.py  add_series_options.py  alternate_title_resource.py  authentication_required_type.py  backup_type.py  blocklist_bulk_resource.py  blocklist_resource.py  command.py  command_result.py  command_status.py  command_trigger.py  custom_filter_resource.py  custom_format_bulk_resource.py  database_type.py  delay_profile_resource.py  disk_space_resource.py  download_client_config_resource.py  episode_file_list_resource.py  episode_file_resource.py  episode_history_event_type.py  episode_resource.py  episode_resource_paging_resource.py  episode_title_required_type.py  episodes_monitored_resource.py  file_date_type.py  health_resource.py  history_resource.py  history_resource_data_type_0.py  history_resource_paging_resource.py  host_config_resource.py  http_uri.py  import_list_bulk_resource.py  import_list_config_resource.py  import_list_exclusion_bulk_resource.py  import_list_exclusion_resource.py  import_list_exclusion_resource_paging_resource.py  import_list_resource.py  import_list_type.py  indexer_config_resource.py  indexer_flag_resource.py  (+63 more)
tests/: test_action_logging.py  test_arr_client.py  test_config.py  test_handlers.py  test_http_client.py  test_log_redaction.py  test_logging.py  test_main.py  test_metrics.py  test_scheduler.py  test_startup_banner.py  test_state.py  test_tag_utils.py
tests/integration/: __init__.py  test_e2e.py  test_integration_suite.py
(+288 files in other folders)
