[project]
name = "gatherarr"
version = "0.1.0"
description = "A minimal worker-style Arr search runner (initial skeleton)."
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.7.0",
  "poethepoet>=0.24.0",
  "pytest>=7.4.0",
  "pytest-timeout>=2.2.0",
  "ruff>=0.1.0",
  "types-pyyaml>=6.0.12",
]

[tool.poe.tasks]
check = ["format", "lint", "type-check", "test"]
format = "ruff format ."
lint = "ruff check ."
type-check = "mypy ."
test = "pytest tests"

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 2

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
follow_imports = "normal"
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
  "-v",
]
timeout = 60
timeout_method = "thread"
